# livl-pacman

./: .gitignore  CMakeLists.txt  README.md  pacman.c  pacman.h
.github/workflows/: github-actions.yml
assets/text/: maze.txt
includes/: main.h  menu_window.h  pacman_window.h  sdl_functions.h  sdl_music.h
modules/: FindSDL2.cmake
src/: constants.h  main.c  main.h  menu_window.c  menu_window.h  pacman.h  pacman_window.c  pacman_window.h  sdl_functions.c  sdl_functions.h
src/enums/: direction.c  direction.h  ghost-mode.h  ghost-type.h  maze-element.h
src/models/: arrow.c  arrow.h  audio.c  audio.h  coins.c  coins.h  direction.h  fruit.c  fruit.h  game.c  game.h  ghost-mode-manager.c  ghost-mode-manager.h  ghost.c  ghost.h  ghost_mode_manager.c  ghost_mode_manager.h  maze-element.h  maze.c  maze.h  pacman.c  pacman.h  pathfinding.c  pathfinding.h  position.c  position.h  speed.c  speed.h  sprite.c  sprite.h  timer.c  timer.h
src/models/ghosts/: chase.c  chase.h  frightened.c  frightened.h  ghost.c  ghost.h  ghost_pathfinding.c  ghost_pathfinding.h  mode_manager.c  mode_manager.h
src/pacman/: pacman.c  pacman.h
src/ui/: game_info_panel.c  game_info_panel.h  game_window.c  game_window.h  menu_window.c  menu_window.h  pacman_window.c  pacman_window.h  pause_menu.c  pause_menu.h  variables.h
src/utilities/: array_utils.c  array_utils.h  console_handler.c  console_handler.h  file_functions.c  file_functions.h  sdl_functions.c  sdl_functions.h  sdl_music.c
